Shang New Live/src/objects/Electric_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Electric_Meter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Electric Meter</label>
        <referenceTo>Electric_Meter__c</referenceTo>
        <relationshipLabel>Electric Transactions</relationshipLabel>
        <relationshipName>Electric_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Unit__c</fullName>
        <label>End Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Horse_Power__c</fullName>
        <label>Horse Power</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Charge__c</fullName>
        <formula>Rent_Schedule__r.Lease_Charge__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Charge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Unit</label>
        <referenceTo>Lease_Unit__c</referenceTo>
        <relationshipLabel>Electric Transactions</relationshipLabel>
        <relationshipName>Electric_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Loss__c</fullName>
        <defaultValue>0.10</defaultValue>
        <label>Line Loss</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maintenance_Fee__c</fullName>
        <label>Maintenance Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manual__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox should be checked when User enters Electric Transaction data manually from Rent Schedule record.</inlineHelpText>
        <label>Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meter_No__c</fullName>
        <label>Meter No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Type__c</fullName>
        <label>Meter Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Meter_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Power_Factor__c</fullName>
        <defaultValue>1.00</defaultValue>
        <label>Power Factor</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Short_Code__c</fullName>
        <label>Property Short Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Electric Transactions</relationshipLabel>
        <relationshipName>Electric_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rent_Schedule__c</fullName>
        <label>Rent Schedule</label>
        <referenceTo>Rent_Schedules__c</referenceTo>
        <relationshipLabel>Electric Transactions</relationshipLabel>
        <relationshipName>Electric_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Unit__c</fullName>
        <label>Start Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Units__c</fullName>
        <formula>((End_Unit__c -  Start_Unit__c) * (Power_Factor__c + (Power_Factor__c * Line_Loss__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <referenceTo>Units__c</referenceTo>
        <relationshipLabel>Electric Transactions</relationshipLabel>
        <relationshipName>Electric_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Electric Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Meter_No__c</columns>
        <columns>From_Date__c</columns>
        <columns>To_Date__c</columns>
        <columns>End_Unit__c</columns>
        <columns>Start_Unit__c</columns>
        <columns>Power_Factor__c</columns>
        <columns>Line_Loss__c</columns>
        <columns>Horse_Power__c</columns>
        <columns>Maintenance_Fee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Meter_Type__c</field>
            <operation>equals</operation>
            <value>Sub Meter</value>
        </filters>
        <filters>
            <field>Property_Short_Code__c</field>
            <operation>equals</operation>
            <value>JMT</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{yyyy}-{mm}-EC-{00000000}</displayFormat>
        <label>Electric Transactions No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Electric Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>